--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -178,6 +178,43 @@ span {
   z-index: 10;
 }
 
+.loading-overlay {
+  z-index: 1050;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.loading {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 2px solid blue;
+  border-radius: 50%;
+  border-top-color: white;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  left: calc(50% - 15px);
+  top: calc(50% - 15px);
+  position: fixed;
+  z-index: 1;
+}
+
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
 // --------- Auth pages
 
 #card-title {
@@ -1451,6 +1488,70 @@ input {
     align-items: center;
   }
 }
+
+.popup-integration {
+  position: absolute;
+  width: 650px;
+  height: 450px;
+  background-color: white;
+  border-radius: $regular-radius;
+  box-shadow: $shadow;
+  z-index: 200;
+}
+.popup_inner-integration {
+  width: 650px;
+  height: 450px;
+  bottom: 3rem;
+  z-index: 200;
+
+  background-color: white;
+  box-shadow: $shadow;
+  border-radius: $regular-radius;
+  border-radius: 20px;
+
+  h4 {
+    font-family: $font;
+    font-size: 18px;
+    font-weight: $bold;
+    color: #001c56;
+    padding: 20px;
+  }
+  .historyCard {
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    align-items: top;
+
+    p {
+      font-size: 14px;
+      font-weight: $regular;
+      padding-left: 20px;
+      color: $huntease-main;
+    }
+    img {
+      width: 25px;
+      height: 25px;
+    }
+  }
+  .confirm-btn {
+    margin: 36px;
+    border-radius: 13px;
+    height: 45px;
+    width: 140px;
+    border-color: white;
+    padding: 15px;
+    background-color: $huntease-red;
+    color: white;
+    font-family: $font;
+    font-size: 14px;
+    font-weight: $regular;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .popup-scheduls {
   position: absolute;
   width: 350px;
